--- a/src/JSPTPD.XuZhou.Sparksiiot.Client/JSPTPD.XuZhou.Sparksiiot.Client.csproj
+++ b/src/JSPTPD.XuZhou.Sparksiiot.Client/JSPTPD.XuZhou.Sparksiiot.Client.csproj
@@ -71,52 +71,52 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="FreeRedis, Version=1.2.2.0, Culture=neutral, PublicKeyToken=9aa6a3079358d437, processorArchitecture=MSIL">
-      <HintPath>..\packages\FreeRedis.1.2.2\lib\net451\FreeRedis.dll</HintPath>
+      <HintPath> ..\..\packages\FreeRedis.1.2.2\lib\net451\FreeRedis.dll</HintPath>
     </Reference>
     <Reference Include="FreeScheduler, Version=2.0.27.0, Culture=neutral, PublicKeyToken=ab52ba0f786702ec, processorArchitecture=MSIL">
-      <HintPath>..\packages\FreeScheduler.2.0.27\lib\net40\FreeScheduler.dll</HintPath>
+      <HintPath>..\..\packages\FreeScheduler.2.0.27\lib\net40\FreeScheduler.dll</HintPath>
     </Reference>
     <Reference Include="FreeSql, Version=3.2.808.0, Culture=neutral, PublicKeyToken=a33928e5d4a4b39c, processorArchitecture=MSIL">
-      <HintPath>..\packages\FreeSql.3.2.808\lib\net451\FreeSql.dll</HintPath>
+      <HintPath>..\..\packages\FreeSql.3.2.808\lib\net451\FreeSql.dll</HintPath>
     </Reference>
     <Reference Include="FreeSql.Provider.Sqlite, Version=3.2.808.0, Culture=neutral, PublicKeyToken=5800863e689c9dd8, processorArchitecture=MSIL">
-      <HintPath>..\packages\FreeSql.Provider.Sqlite.3.2.808\lib\net45\FreeSql.Provider.Sqlite.dll</HintPath>
+      <HintPath>..\..\packages\FreeSql.Provider.Sqlite.3.2.808\lib\net45\FreeSql.Provider.Sqlite.dll</HintPath>
     </Reference>
     <Reference Include="FreeSql.Provider.SqlServer, Version=3.2.808.0, Culture=neutral, PublicKeyToken=d313b98af285bd88, processorArchitecture=MSIL">
-      <HintPath>..\packages\FreeSql.Provider.SqlServer.3.2.808\lib\net451\FreeSql.Provider.SqlServer.dll</HintPath>
+      <HintPath>..\..\packages\FreeSql.Provider.SqlServer.3.2.808\lib\net451\FreeSql.Provider.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="IdleBus, Version=1.5.3.0, Culture=neutral, PublicKeyToken=c3451542aabc4510, processorArchitecture=MSIL">
-      <HintPath>..\packages\IdleBus.1.5.3\lib\net40\IdleBus.dll</HintPath>
+      <HintPath>..\..\packages\IdleBus.1.5.3\lib\net40\IdleBus.dll</HintPath>
     </Reference>
     <Reference Include="NCrontab.Signed, Version=3.3.3.0, Culture=neutral, PublicKeyToken=5247b4370afff365, processorArchitecture=MSIL">
-      <HintPath>..\packages\NCrontab.Signed.3.3.3\lib\net35\NCrontab.Signed.dll</HintPath>
+      <HintPath>..\..\packages\NCrontab.Signed.3.3.3\lib\net35\NCrontab.Signed.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
-      <HintPath>..\packages\Serilog.2.12.0\lib\net45\Serilog.dll</HintPath>
+      <HintPath>..\..\packages\Serilog.2.12.0\lib\net45\Serilog.dll</HintPath>
     </Reference>
     <Reference Include="Serilog.Sinks.Async, Version=1.5.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
-      <HintPath>..\packages\Serilog.Sinks.Async.1.5.0\lib\net45\Serilog.Sinks.Async.dll</HintPath>
+      <HintPath>..\..\packages\Serilog.Sinks.Async.1.5.0\lib\net45\Serilog.Sinks.Async.dll</HintPath>
     </Reference>
     <Reference Include="Serilog.Sinks.Console, Version=4.1.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
-      <HintPath>..\packages\Serilog.Sinks.Console.4.1.0\lib\net45\Serilog.Sinks.Console.dll</HintPath>
+      <HintPath>..\..\packages\Serilog.Sinks.Console.4.1.0\lib\net45\Serilog.Sinks.Console.dll</HintPath>
     </Reference>
     <Reference Include="Serilog.Sinks.File, Version=5.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
-      <HintPath>..\packages\Serilog.Sinks.File.5.0.0\lib\net45\Serilog.Sinks.File.dll</HintPath>
+      <HintPath>..\..\packages\Serilog.Sinks.File.5.0.0\lib\net45\Serilog.Sinks.File.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Common, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Data.Common.4.3.0\lib\net451\System.Data.Common.dll</HintPath>
+      <HintPath>..\..\packages\System.Data.Common.4.3.0\lib\net451\System.Data.Common.dll</HintPath>
     </Reference>
     <Reference Include="System.Data.SqlClient, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Data.SqlClient.4.8.5\lib\net451\System.Data.SqlClient.dll</HintPath>
+      <HintPath>..\..\packages\System.Data.SqlClient.4.8.5\lib\net451\System.Data.SqlClient.dll</HintPath>
     </Reference>
     <Reference Include="System.Data.SQLite, Version=1.0.115.5, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
-      <HintPath>..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.115.5\lib\net451\System.Data.SQLite.dll</HintPath>
+      <HintPath>..\..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.115.5\lib\net451\System.Data.SQLite.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -128,7 +128,7 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="WorkQueue, Version=1.3.0.0, Culture=neutral, PublicKeyToken=91dd5d1588b676a4, processorArchitecture=MSIL">
-      <HintPath>..\packages\WorkQueue.1.3.0\lib\net45\WorkQueue.dll</HintPath>
+      <HintPath>..\..\packages\WorkQueue.1.3.0\lib\net45\WorkQueue.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -183,11 +183,5 @@
     </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.115.5\build\net451\Stub.System.Data.SQLite.Core.NetFramework.targets" Condition="Exists('..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.115.5\build\net451\Stub.System.Data.SQLite.Core.NetFramework.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>这台计算机上缺少此项目引用的 NuGet 程序包。使用“NuGet 程序包还原”可下载这些程序包。有关更多信息，请参见 http://go.microsoft.com/fwlink/?LinkID=322105。缺少的文件是 {0}。</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.115.5\build\net451\Stub.System.Data.SQLite.Core.NetFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.115.5\build\net451\Stub.System.Data.SQLite.Core.NetFramework.targets'))" />
-  </Target>
+  <Import Project="..\..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.115.5\build\net451\Stub.System.Data.SQLite.Core.NetFramework.targets" Condition="Exists('..\..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.115.5\build\net451\Stub.System.Data.SQLite.Core.NetFramework.targets')" />
 </Project>
