--- a/src/JSPTPD.XuZhou.Sparksiiot.Http/JSPTPD.XuZhou.Sparksiiot.Http.csproj
+++ b/src/JSPTPD.XuZhou.Sparksiiot.Http/JSPTPD.XuZhou.Sparksiiot.Http.csproj
@@ -5,6 +5,13 @@
 		<OutputType>Library</OutputType>
 		<RootNamespace>JSPTPD.XuZhou.Sparksiiot.Http</RootNamespace>
 		<TargetFrameworks>net45;net451;netstandard1.3;netstandard2.0;netstandard2.1;net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<Title>星源物联.net</Title>
+		<Description>星源物联.net</Description>
+		<Copyright>XiaoYou</Copyright>
+		<PackageTags>sparksiiot</PackageTags>
+		<PackageIcon>sparksiiot.png</PackageIcon>
+		<RepositoryUrl>http://git.xiaoyou.run/JSPTPD/JSPTPD.XuZhou.Sparksiiot</RepositoryUrl>
 	</PropertyGroup>
 	<ItemGroup>
 	  <PackageReference Include="Flurl" Version="2.8.2" />
